# hypr-spatial

hyprscrolling/: CMakeLists.txt  Scrolling.cpp  Scrolling.hpp  main.cpp
